--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,7 @@
-six
-docutils
-jinja2
-babel
-imagesize
-markupsafe
-pytz
-jupyter>=1.0
-notebook
-ipywidgets
-numpy>=1.9
-scipy
-matplotlib
-pylru
-Sphinx
-astropy
-h5py
-json-tricks
+bokeh
 dask
 distributed
-bokeh
+jupyter>=1.0
+matplotlib
+numpy
+scipy
