ORC-1196-adding unit-test for 2d

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ variables:
 
 stages:
   - lint
-  - build
   - test
+  - build
   - publish
   - pages
 
@@ -14,9 +14,9 @@ include:
     # Python
   - project: 'ska-telescope/templates-repository'
     file: 'gitlab-ci/includes/python.gitlab-ci.yml'
-    # Docs pages
-  - project: 'ska-telescope/templates-repository'
-    file: 'gitlab-ci/includes/docs-pages.gitlab-ci.yml'
+#    # Docs pages
+#  - project: 'ska-telescope/templates-repository'
+#    file: 'gitlab-ci/includes/docs-pages.gitlab-ci.yml'
     # Tag Based GitLab Release Management
   - project: 'ska-telescope/templates-repository'
     file: 'gitlab-ci/includes/release.gitlab-ci.yml'
