--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,6 @@
-image: $SKA_K8S_TOOLS_DOCKER_BUILDER_IMAGE
+#image: $SKA_K8S_TOOLS_DOCKER_BUILDER_IMAGE
+
+image: python:3.8
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
