--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,11 @@ stages:
   - pages
 
 include:
-# Python
+# Python lint and testing
   - project: 'ska-telescope/templates-repository'
-    file: 'gitlab-ci/includes/python.gitlab-ci.yml'
+    file: 'gitlab-ci/includes/python-build.gitlab-ci.yml'
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/python-test.gitlab-ci.yml'
 
 # .post step finalisers eg: badges
   - project: 'ska-telescope/templates-repository'
@@ -25,8 +27,3 @@ python-lint:
 python-test:
   image:  $SKA_K8S_TOOLS_DOCKER_BUILDER_IMAGE
 
-python-build-for-development:
-  image:  $SKA_K8S_TOOLS_DOCKER_BUILDER_IMAGE
-
-python-build-for-publication:
-  image:  $SKA_K8S_TOOLS_DOCKER_BUILDER_IMAGE
