--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ variables:
 stages:
   - lint
   - test
+  - build
   - pages
 
 include:
@@ -18,6 +19,11 @@ include:
 # .post step finalisers eg: badges
   - project: 'ska-telescope/templates-repository'
     file: 'gitlab-ci/includes/finaliser.gitlab-ci.yml'
+
+  # Documentation jobs
+  - project: 'ska-telescope/templates-repository'
+    file: 'gitlab-ci/includes/docs.gitlab-ci.yml'
+
 
 python-lint:
   image: $SKA_K8S_TOOLS_DOCKER_BUILDER_IMAGE
