--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ license = "BSD-3-Clause"
 repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-distributed-fourier-transform"
 
 [tool.poetry.dependencies]
-python = "3.9.5"
+python = "^3.9.5"
 bokeh = "^2.4.2"
-dask = "^2022.2.0"
-distributed = "^2022.2.0"
+dask = "^2022.03.0"
+distributed = "^2022.3.0"
 jupyter = "^1.0.0"
 matplotlib = "^3.5.1"
-numpy = "^1.22.2"
+numpy = "^1.22.3"
 scipy = "^1.8.0"
 
 [tool.poetry.dev-dependencies]
