--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ distributed = "^2022.3.0"
 jupyter = "^1.0.0"
 matplotlib = "^3.5.1"
 numpy = "^1.22.3"
-scipy = "^1.8.0"
+scipy = {version="^1.8.0", python=">=3.9.5,<3.11"}
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
