--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ matplotlib = "^3.5.1"
 numpy = "^1.22.3"
 scipy = {version="^1.8.0", python=">=3.9.5,<3.11"}
 h5py = "^3.6.0"
+pandas = "^1.4.2"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
