ORC-1369: Minor change

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,7 @@
-ska-sdp-distributed-fourier-transform codeowners
+ska-sdp-distributed-fourier-transform code owners
 ====================================================
 
 Celeste Lu
 Feng Wang
+Gabriella Hodosán
+Peter Wortmann
