ORC-1369: Corrected code owners format

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,7 +1,1 @@
-ska-sdp-distributed-fourier-transform code owners
-====================================================
-
-Celeste Lu
-Feng Wang
-Gabriella Hodosán
-Peter Wortmann
+* @luminosa42 @cnwangfeng @gabicca @scpmw
