ORC-1355: fix doc

--- a/docs/src/Makefile
+++ b/docs/src/Makefile
@@ -2,9 +2,10 @@ SHELL := /bin/bash
 # Minimal makefile for Sphinx documentation
 #
 
+
 # You can set these variables from the command line.
 SPHINXOPTS    =
-SPHINXBUILD   = PYTHONPATH="../src" sphinx-build python -msphinx
+SPHINXBUILD   = python -msphinx
 SPHINXPROJ    = skeleton
 SOURCEDIR     = src/
 BUILDDIR      = ../build
