ORC-1355 Refractor Project structure And Removing some old-style configurations

--- a/docs/src/Makefile
+++ b/docs/src/Makefile
@@ -2,11 +2,12 @@ SHELL := /bin/bash
 # Minimal makefile for Sphinx documentation
 #
 
+
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = python -msphinx
 SPHINXPROJ    = skeleton
-SOURCEDIR     = src
+SOURCEDIR     = src/
 BUILDDIR      = ../build
 
 # Internal variables.
