--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,6 +5,12 @@
 # Required
 version: 2
 
+# Set the version of Python and other tools you might need
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.9"
+
 # Build documentation in the docs/src/ directory with Sphinx
 sphinx:
   configuration: docs/src/conf.py
@@ -12,16 +18,8 @@ sphinx:
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
 
-build:
-  apt_packages:
-    - gfortran
-    - libboost-dev
-    - libboost-python-dev
-    - libboost-numpy-dev
-
-# Optionally set the version of the Python and requirements required to build
+# Optionally set the requirements required to build
 #  your docs
 python:
-  version: 3.8
   install:
     - requirements: docs/requirements.txt
