SP-2570 Add ska-sdp-func as a proper dependency
Using the freshly-released 1.0.0 version...

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,9 +1,11 @@
+--extra-index-url https://artefact.skao.int/repository/pypi-internal/simple
 numpy
 scipy
 dask
 distributed
 h5py
 matplotlib
+ska-sdp-func
 sphinx
 sphinx-argparse
 sphinx-rtd-theme
