--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,26 +7,26 @@ license = "BSD-3-Clause"
 repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-distributed-fourier-transform"
 
 [tool.poetry.dependencies]
-python = "^3.9.5"
-bokeh = "^2.4.3"
-dask = "^2022.9.0"
-distributed = "^2022.9.0"
+python = "^3.10"
+bokeh = "^3.3.4"
+dask = "^2024.2.1"
+distributed = "^2024.2.1"
 jupyter = "^1.0.0"
-matplotlib = "^3.5.3"
-numpy = "^1.23.3"
-scipy = {version="^1.9.1", python=">=3.9.5,<3.11"}
-h5py = "^3.7.0"
-pandas = "^1.4.4"
+matplotlib = "^3.8.3"
+numpy = "^1.26.4"
+scipy = "^1.12.0"
+h5py = "^3.10.0"
+pandas = "^2.2.1"
 
 [tool.poetry.dev-dependencies]
-isort = "^5.10.1"
-black = "^22.8.0"
-flake8 = "^5.0.4"
-pylint = "^2.15.2"
-pylint-junit = "^0.3.2"
-pytest = "^7.1.3"
-pytest-cov = "^3.0.0"
-build = "^0.8.0"
+isort = "^5.13.2"
+black = "^24.1.0"
+flake8 = "^7.0.0"
+pylint = "^3.0.3"
+pylint-junit = "^0.3.4"
+pytest = "^7.4.4"
+pytest-cov = "^4.1.0"
+build = "^1.0.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
