--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,25 +1,23 @@
-# .readthedocs.yml
+# .readthedocs.yaml
 # Read the Docs configuration file.
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
 # Required
 version: 2
 
-# Set the version of Python and other tools you might need
 build:
-  os: ubuntu-20.04
+  os: ubuntu-22.04
   tools:
-    python: "3.9"
+    python: "3.10"
+  jobs:
+    post_create_environment:
+      - pip install poetry
+    post_install:
+      # VIRTUAL_ENV needs to be set manually for now.
+      # See https://github.com/readthedocs/readthedocs.org/pull/11152/
+      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry install --no-root --only docs
 
 # Build documentation in the docs/src/ directory with Sphinx
 sphinx:
   configuration: docs/src/conf.py
 
-# Optionally build your docs in additional formats such as PDF and ePub
-formats: all
-
-# Optionally set the requirements required to build
-#  your docs
-python:
-  install:
-    - requirements: docs/requirements.txt
