--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,11 @@ stages:
 include:
   # Python lint and testing
   - project: 'ska-telescope/templates-repository'
-    file: 'gitlab-ci/includes/python-lint.gitlab-ci.yml'
+    file: 'gitlab-ci/includes/python.gitlab-ci.yml'
+
+  # Notebook
   - project: 'ska-telescope/templates-repository'
-    file: 'gitlab-ci/includes/python-test.gitlab-ci.yml'
+    file: 'gitlab-ci/includes/notebook.gitlab-ci.yml'
 
   # OCI Images
   - project: 'ska-telescope/templates-repository'
