--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,23 @@ pytest-cov = "^4.1.0"
 build = "^1.0.3"
 nbqa = "^1.8.5"
 
+[tool.poetry.group.docs.dependencies]
+sphinx = "^7.2"
+sphinx-rtd-theme = "^2.0"
+sphinx-argparse = "^0.4"
+sphinx_automodapi = "^0.17"
+
+# Additional packages needed to be installed
+# so that the docs can render the API correctly
+# without the need of mocking every single import
+numpy = "^1.26.4"
+scipy = "^1.12.0"
+h5py = "^3.10.0"
+dask = "^2024.2.1"
+distributed = "^2024.2.1"
+matplotlib = "^3.8.3"
+ska-sdp-func = "^1.0.1"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
