--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dask = "^2024.2.1"
 distributed = "^2024.2.1"
 matplotlib = "^3.8.3"
 ska-sdp-func = "^1.0.1"
+nbmake = "^1.5.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
